--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,37 @@
 body {
     display: flex;
     flex-direction: column;
-    align-items: center; 
-    justify-content: center; 
-    height: 100vh; 
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
     margin: 0;
-    font-family: "montserrat", sans-serif;
+    font-family: "Montserrat", sans-serif;
+}
+
+h1, h2 {
+    color: #05060f;
+    text-align: center;
+}
+
+.descripcion {
+    text-align: center;
+    margin-bottom: 1rem;
 }
 
 form {
     display: flex;
-    flex-direction: row; 
-    align-items: center; 
-    gap: 1rem; 
-}
-
-.input-group-container {
-    display: flex; 
-    justify-content: center; 
-    gap: 1rem; 
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
 }
 
 .input-group {
     display: flex;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
 }
 
-.input-group input {
+.input {
     max-width: 190px;
     height: 44px;
     background-color: #0f08050a;
@@ -35,14 +39,14 @@ form {
     padding: 0 1rem;
     border: 2px solid transparent;
     font-size: 1rem;
-    transition: border-color .3s cubic-bezier(.25,.01,.25,1) 0s, color .3s cubic-bezier(.25,.01,.25,1) 0s, background .2s cubic-bezier(.25,.01,.25,1) 0s;
+    transition: border-color .3s cubic-bezier(.25,.01,.25,1), color .3s cubic-bezier(.25,.01,.25,1), background .2s cubic-bezier(.25,.01,.25,1);
 }
 
 .label {
     font-size: .9rem;
     font-weight: bold;
     color: #04128999;
-    transition: color .3s cubic-bezier(.25,.01,.25,1) 0s;
+    transition: color .3s cubic-bezier(.25,.01,.25,1);
     font-family: "Montserrat", sans-serif;
 }
 
@@ -64,17 +68,10 @@ button {
     color: #ffffff;
     cursor: pointer;
     transition: background-color .3s;
-    font-family: "montserrat";
-    
 }
 
 button:hover {
     background-color: #333;
-}
-
-h1, h2 {
-    color: #05060f;
-    text-align: center;
 }
 
 .input::-webkit-outer-spin-button,
